attempt to fix poster stretching on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -472,7 +472,7 @@ a #mealText{
 }
 
 #post-poster{
-	width: 35vw;
+	width: 60%;
 }
 
 #post-dataBar{
